v0.6.x/_sources/reference/fury.actor.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

:mod:`actor`
============
.. automodule:: fury.actor

.. currentmodule:: fury.actor
.. autosummary::

   Container
   add_shader_callback
   apply_affine
   arrow
   attribute_to_actor
   axes
   billboard
   box
   colormap_lookup_table
   cone
   contour_from_label
   contour_from_roi
   create_colormap
   cube
   cylinder
   deprecated_params
   dots
   figure
   frustum
   get_actor_from_primitive
   grid
   label
   line
   lines_to_vtk_polydata
   load
   load_image
   numpy_to_vtk_matrix
   octagonalprism
   odf_slicer
   orient2rgb
   peak_slicer
   point
   rectangle
   repeat_sources
   replace_shader_in_actor
   rgb_to_vtk
   scalar_bar
   sdf
   set_input
   set_polydata_triangles
   set_polydata_vertices
   shader_to_actor
   shallow_copy
   slicer
   sphere
   square
   streamtube
   superquadric
   surface
   tensor_slicer
   text_3d
   texture
   texture_on_sphere


.. currentmodule:: fury.actor


:class:`Container`
~~~~~~~~~~~~~~~~~~


.. autoclass:: Container
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

add_shader_callback
~~~~~~~~~~~~~~~~~~~

.. autofunction:: add_shader_callback

apply_affine
~~~~~~~~~~~~

.. autofunction:: apply_affine

arrow
~~~~~

.. autofunction:: arrow

attribute_to_actor
~~~~~~~~~~~~~~~~~~

.. autofunction:: attribute_to_actor

axes
~~~~

.. autofunction:: axes

billboard
~~~~~~~~~

.. autofunction:: billboard

box
~~~

.. autofunction:: box

colormap_lookup_table
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: colormap_lookup_table

cone
~~~~

.. autofunction:: cone

contour_from_label
~~~~~~~~~~~~~~~~~~

.. autofunction:: contour_from_label

contour_from_roi
~~~~~~~~~~~~~~~~

.. autofunction:: contour_from_roi

create_colormap
~~~~~~~~~~~~~~~

.. autofunction:: create_colormap

cube
~~~~

.. autofunction:: cube

cylinder
~~~~~~~~

.. autofunction:: cylinder

deprecated_params
~~~~~~~~~~~~~~~~~

.. autofunction:: deprecated_params

dots
~~~~

.. autofunction:: dots

figure
~~~~~~

.. autofunction:: figure

frustum
~~~~~~~

.. autofunction:: frustum

get_actor_from_primitive
~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: get_actor_from_primitive

grid
~~~~

.. autofunction:: grid

label
~~~~~

.. autofunction:: label

line
~~~~

.. autofunction:: line

lines_to_vtk_polydata
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: lines_to_vtk_polydata

load
~~~~

.. autofunction:: load

load_image
~~~~~~~~~~

.. autofunction:: load_image

numpy_to_vtk_matrix
~~~~~~~~~~~~~~~~~~~

.. autofunction:: numpy_to_vtk_matrix

octagonalprism
~~~~~~~~~~~~~~

.. autofunction:: octagonalprism

odf_slicer
~~~~~~~~~~

.. autofunction:: odf_slicer

orient2rgb
~~~~~~~~~~

.. autofunction:: orient2rgb

peak_slicer
~~~~~~~~~~~

.. autofunction:: peak_slicer

point
~~~~~

.. autofunction:: point

rectangle
~~~~~~~~~

.. autofunction:: rectangle

repeat_sources
~~~~~~~~~~~~~~

.. autofunction:: repeat_sources

replace_shader_in_actor
~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: replace_shader_in_actor

rgb_to_vtk
~~~~~~~~~~

.. autofunction:: rgb_to_vtk

scalar_bar
~~~~~~~~~~

.. autofunction:: scalar_bar

sdf
~~~

.. autofunction:: sdf

set_input
~~~~~~~~~

.. autofunction:: set_input

set_polydata_triangles
~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: set_polydata_triangles

set_polydata_vertices
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: set_polydata_vertices

shader_to_actor
~~~~~~~~~~~~~~~

.. autofunction:: shader_to_actor

shallow_copy
~~~~~~~~~~~~

.. autofunction:: shallow_copy

slicer
~~~~~~

.. autofunction:: slicer

sphere
~~~~~~

.. autofunction:: sphere

square
~~~~~~

.. autofunction:: square

streamtube
~~~~~~~~~~

.. autofunction:: streamtube

superquadric
~~~~~~~~~~~~

.. autofunction:: superquadric

surface
~~~~~~~

.. autofunction:: surface

tensor_slicer
~~~~~~~~~~~~~

.. autofunction:: tensor_slicer

text_3d
~~~~~~~

.. autofunction:: text_3d

texture
~~~~~~~

.. autofunction:: texture

texture_on_sphere
~~~~~~~~~~~~~~~~~

.. autofunction:: texture_on_sphere

